Resolves: tdf#143511 SysObj is clipped out if the widget is out of view

so the sizes and relative positions are invalid under gtk, unclip
the SysObj when using get_extents_relative_to

Change-Id: Ibdaff20531a2a40b3b9b7dc9ac880d014db07d5a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/125141
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>